<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include
        android:id="@+id/nav_bar"
        layout="@layout/nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ScrollView
        android:id="@+id/scrollContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="0dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/nav_bar"
        app:layout_constraintBottom_toTopOf="@+id/bottomButtons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/ReasonWhy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rounded_box"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/layoutTitleBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:paddingVertical="10dp"
                android:paddingHorizontal="16dp"
                android:background="@drawable/rounded_title">

                <TextView
                    android:id="@+id/tvAddNewMoodEvent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_new_mood"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_bin"
                android:paddingTop="12dp"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:paddingBottom="2dp"
                >

                <TextView
                    android:id="@+id/tvDateLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_picker"
                    android:textSize="12sp"
                    android:textColor="@color/textColor"
                    android:layout_marginBottom="4dp" />

                <TextView
                    android:id="@+id/tvDateValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/february_8_2025"
                    android:textSize="16sp"
                    android:textColor="@color/black" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:layout_marginTop="4dp"
                    android:background="@color/accentColor" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_bin"
                android:padding="12dp"
                >

                <TextView
                    android:id="@+id/tvTimeLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_picker"
                    android:textSize="12sp"
                    android:textColor="@color/textColor"
                    android:layout_marginBottom="4dp" />

                <TextView
                    android:id="@+id/tvTimeValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_00pm"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/rounded_bin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/ReasonLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reason_why"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/Reason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:hint="Please type your thoughts here..."
                    android:inputType="textMultiLine"
                    android:maxLength="20"
                    android:maxLines="3"
                    android:padding="12dp" />

                <Button
                    android:id="@+id/AttachPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:backgroundTint="@color/buttonColor"
                    android:padding="8dp"
                    android:text="@string/attach_photo"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:background="@drawable/rounded_bin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSocialSituation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/social_situation"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/textColor"
                    android:layout_marginBottom="8dp" />

                <RadioGroup
                    android:id="@+id/rgSocialSituation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="24dp"
                    android:weightSum="4">

                    <RadioButton
                        android:id="@+id/rbAlone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/alone"
                        android:textSize="10sp"
                        android:textColor="@color/textColor"
                        android:gravity="center" />

                    <RadioButton
                        android:id="@+id/rbOneOnOne"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.1"
                        android:text="@string/one_on_one"
                        android:textSize="10sp"
                        android:textColor="@color/textColor"
                        android:gravity="center" />

                    <RadioButton
                        android:id="@+id/rbGroup"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/group"
                        android:textSize="10sp"
                        android:textColor="@color/textColor"
                        android:gravity="center" />

                    <RadioButton
                        android:id="@+id/rbCrowd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/crowd"
                        android:textColor="@color/textColor"
                        android:textSize="10sp"
                        android:gravity="center" />
                </RadioGroup>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnAttachLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:text="@string/attach_location"
                        android:backgroundTint="@color/buttonColor"
                        android:textColor="@color/textColor" />

                    <ImageView
                        android:id="@+id/ivMap"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_weight="1"
                        android:padding="8dp"
                        android:src="@drawable/ic_map"
                        app:tint="#64a9e5"/>
                </LinearLayout>

            </LinearLayout>



        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:id="@+id/bottomButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btnSaveEntry"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/save_entry"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:backgroundTint="@null"
            app:backgroundTint="@null"
            android:textStyle="bold"
            android:background="@drawable/green_outline_button" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/textColor"
            android:backgroundTint="@null"
            app:backgroundTint="@null"
            android:textStyle="bold"
            android:background="@drawable/green_outline_button" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
